[CORE] Phase 2 and 2.5 - API Depreciation, Move to Components, Fix the Menus....  (#795)
* Bump version and add Hangar Publish plugin

Updated version to 1.21.10-50-RC1 and added Hangar Publish plugin.

* Update version from 1.21.10-50-RC1 to 1.21.10-49.3

* Update GitHub Artifact Actions to v6 (major) (#790)

Update GitHub Artifact Actions to v6

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

* Update actions/setup-java action to v4.8.0 (#786)

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

* Update dependency org.apache.maven.plugins:maven-release-plugin to v3.3.1 (#793)

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

* [CORE] Complete Phase 2 & Phase 2.5: Move to Components. Fix all the Menus. Remove the API

Signed-off-by: Wolfieheart <xmakeitrain94@gmail.com>

* [CORE] Chore (post Phase 2): Small Fixes

Signed-off-by: Wolfieheart <xmakeitrain94@gmail.com>

* [CORE] Chore (post Phase 2): Fix the build failure + add Shutdown for debug logging

Signed-off-by: Wolfieheart <xmakeitrain94@gmail.com>

* [CORE] Chore (post Phase 2): Left RC1 in 1 place too many.... CBA

Signed-off-by: Wolfieheart <xmakeitrain94@gmail.com>

* [CORE] Chore (post Phase 2): Some Smaller Fixes

Signed-off-by: Wolfieheart <xmakeitrain94@gmail.com>

---------

Signed-off-by: Wolfieheart <xmakeitrain94@gmail.com>
Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>