@@ -19,22 +19,26 @@
 
 package io.github.rypofalem.armorstandeditor;
 
+import com.griefdefender.lib.kyori.adventure.text.serializer.legacy.LegacyComponentSerializer;
 import com.jeff_media.updatechecker.UpdateCheckSource;
 import com.jeff_media.updatechecker.UpdateChecker;
 import com.jeff_media.updatechecker.UserAgentBuilder;
 
-import io.github.rypofalem.armorstandeditor.Metrics.*;
+import io.github.rypofalem.armorstandeditor.Metrics.DrilldownPie;
+import io.github.rypofalem.armorstandeditor.Metrics.SimplePie;
 import io.github.rypofalem.armorstandeditor.language.Language;
-
 import io.github.rypofalem.armorstandeditor.utils.MinecraftVersion;
 import io.github.rypofalem.armorstandeditor.utils.VersionUtil;
+
 import io.papermc.lib.PaperLib;
 import io.papermc.paper.ServerBuildInfo;
+
 import net.kyori.adventure.text.Component;
-import net.kyori.adventure.text.format.NamedTextColor;
-import net.kyori.adventure.text.serializer.legacy.LegacyComponentSerializer;
-import org.bukkit.*;
-import org.bukkit.entity.ComplexEntityPart;
+
+import org.bukkit.Bukkit;
+import org.bukkit.Material;
+import org.bukkit.NamespacedKey;
+import org.bukkit.World;
 import org.bukkit.entity.Player;
 import org.bukkit.event.inventory.InventoryCloseEvent;
 import org.bukkit.inventory.ItemStack;
@@ -46,13 +50,16 @@ import org.bukkit.scoreboard.Team;
 
 import java.io.File;
 import java.util.*;
+import java.util.logging.Level;
+
+import static net.kyori.adventure.text.format.NamedTextColor.RED;
 
 public class ArmorStandEditorPlugin extends JavaPlugin {
 
     //!!! DO NOT REMOVE THESE UNDER ANY CIRCUMSTANCES - Required for BStats and UpdateChecker !!!
-    public static final String HANGAR_RESOURCE_ID = "Wolfieheart/ArmorStandEditor-Reborn/Release";  //Used for Update Checker
+    public static final String HANGAR_RELEASE_CHANNEL = "Wolfieheart/ArmorStandEditor-Reborn/Release";  //Used for Update Checker
     private static final int PLUGIN_ID = 12668;		     //Used for BStats Metrics
-    private Debug debug;
+    public Debug debug;
 
     private NamespacedKey iconKey;
     private static ArmorStandEditorPlugin instance;
@@ -65,12 +72,10 @@ public class ArmorStandEditorPlugin extends JavaPlugin {
     public boolean hasPaper = false;
     public boolean hasFolia = false;
     String nmsVersionNotLatest = null;
-    String maxSupported = String.valueOf(MinecraftVersion.MINECRAFT_1_21);
-    String minSupported = String.valueOf(MinecraftVersion.MINECRAFT_1_17);
-    String versionLogPrefix = null;
+    String versionLogPrefix;
 
     //Hardcode the ASE Version
-    public static final String ASE_VERSION = "1.21.11-50-RC1";
+    public static final String ASE_VERSION = "1.21.11-50.RC2";
     public static final String SEPARATOR_FIELD = "================================";
 
     public PlayerEditorManager editorManager;
@@ -86,10 +91,8 @@ public class ArmorStandEditorPlugin extends JavaPlugin {
     int editToolData = Integer.MIN_VALUE;
     boolean requireToolData = false;
     boolean requireToolName = false;
-
     String editToolNameRaw = null;
     Component editToolName = null;
-
     boolean requireToolLore = false;
     List<?> editToolLore = null;
     boolean enablePerWorld = false;
@@ -137,46 +140,45 @@ public class ArmorStandEditorPlugin extends JavaPlugin {
         if (!Scheduler.isFolia())
             scoreboard = Objects.requireNonNull(this.getServer().getScoreboardManager()).getMainScoreboard();
 
-        //Load Messages in Console
+        //START ---  Load Messages in Console
         getLogger().info("======= ArmorStandEditor =======");
         getLogger().info("Plugin Version: v" + ASE_VERSION);
 
-        //Spigot Check
         hasPaper = getHasPaper();
         hasFolia = Scheduler.isFolia();
 
         //Get NMS Version
         nmsVersion = getServer().getMinecraftVersion();
         versionLogPrefix = warningMCVer + nmsVersion;
-        
-        if(VersionUtil.fromString(nmsVersion).isNewerThanOrEquals(VersionUtil.fromString(maxSupported))) {
+
+        if (VersionUtil.fromString(nmsVersion).isNewerThanOrEquals(MinecraftVersion.MINECRAFT_1_21)) {
             getLogger().info(versionLogPrefix);
-            getLogger().info("ArmorStandEditor is compatible with this version of Minecraft. Loading continuing.");    
-        } else if (VersionUtil.fromString(nmsVersion).isOlderThanOrEquals(VersionUtil.fromString(minSupported))) {
+            getLogger().info("ArmorStandEditor is compatible with this version of Minecraft. Loading continuing.");
+        } else if (VersionUtil.fromString(nmsVersion).isOlderThanOrEquals(MinecraftVersion.MINECRAFT_1_21)) {
             getLogger().warning(versionLogPrefix);
             getLogger().warning("ArmorStandEditor is compatible with this version of Minecraft, but it is not the latest supported version.");
             getLogger().warning("Loading continuing, but please consider updating to the latest version.");
-        } else {
+        } else if (VersionUtil.fromString(nmsVersion).isOlderThan(MinecraftVersion.OLDEST_SUPPORTED_VERSION)) {
             getLogger().severe(versionLogPrefix);
             getLogger().severe("ArmorStandEditor is not compatible with this version of Minecraft. Please update to at least version 1.17. Loading failed.");
             getServer().getPluginManager().disablePlugin(this);
             getLogger().info(SEPARATOR_FIELD);
         }
 
-
         //If Paper and Folia are both FALSE - Disable the plugin
         if (!hasPaper && !hasFolia) {
             getLogger().severe("This plugin requires either Paper or one of its forks to run. This is not an error, please do not report this!");
+            getServer().getPluginManager().disablePlugin(this);
             getLogger().info(SEPARATOR_FIELD);
             getServer().getPluginManager().disablePlugin(this);
             return;
         } else {
-            getLogger().info("PaperMC: " + hasPaper);
+            getLogger().log(Level.INFO, "Paper/Folia Present? {0}", hasPaper);
         }
 
         if (!hasFolia) {
             scoreboard = Objects.requireNonNull(this.getServer().getScoreboardManager()).getMainScoreboard();
-            registerScoreboards(scoreboard);           
+            registerScoreboards(scoreboard);
             asTeams.add(lockedTeam);
             asTeams.add(inUseTeam);
         } else {
@@ -184,6 +186,7 @@ public class ArmorStandEditorPlugin extends JavaPlugin {
         }
 
         getLogger().info(SEPARATOR_FIELD);
+        /// ----- End of Initial Console Output
 
         //saveResource doesn't accept File.separator on Windows, need to hardcode unix separator "/" instead
         updateConfig("", "config.yml");
@@ -227,8 +230,9 @@ public class ArmorStandEditorPlugin extends JavaPlugin {
         requireToolName = getConfig().getBoolean("requireToolName", false);
         if (requireToolName) {
             editToolNameRaw = getConfig().getString("toolName", null);
-            if (editToolNameRaw != null)
-                editToolName = LegacyComponentSerializer.legacyAmpersand().deserialize(editToolNameRaw);
+            if (editToolNameRaw != null) {
+                editToolName = (Component) LegacyComponentSerializer.legacyAmpersand().deserialize(editToolNameRaw);
+            }
         }
 
         //Custom Model Data
@@ -257,7 +261,7 @@ public class ArmorStandEditorPlugin extends JavaPlugin {
         enablePerWorld = getConfig().getBoolean("enablePerWorldSupport", false);
         if (enablePerWorld) {
             allowedWorldList = getConfig().getList("allowed-worlds", null);
-            if (allowedWorldList != null && allowedWorldList.get(0).equals("*")) {
+            if (allowedWorldList != null && allowedWorldList.getFirst().equals("*")) {
                 allowedWorldList = getServer().getWorlds().stream().map(World::getName).toList();
             }
         }
@@ -289,7 +293,7 @@ public class ArmorStandEditorPlugin extends JavaPlugin {
 
         debugFlag = getConfig().getBoolean("debugFlag", false);
         if (debugFlag) {
-            getLogger().info("[ArmorStandEditor-Debug] ArmorStandEditor Debug Mode is now ENABLED! Use this ONLY for testing Purposes. If you can see this and you have debug disabled, please report it as a bug!");
+            getServer().getLogger().log(Level.INFO, "[ArmorStandEditor-Debug] ArmorStandEditor Debug Mode is now ENABLED! Use this ONLY for testing Purposes. If you can see this and you have debug disabled, please report it as a bug!");
             debug = new Debug(this);
         }
 
@@ -319,17 +323,16 @@ public class ArmorStandEditorPlugin extends JavaPlugin {
     }
 
     private void runUpdateCheckerConsoleUpdateCheck() {
-         new UpdateChecker(this, UpdateCheckSource.HANGAR, HANGAR_RESOURCE_ID)
+        new UpdateChecker(this, UpdateCheckSource.HANGAR, HANGAR_RELEASE_CHANNEL)
             .setDownloadLink("https://hangar.papermc.io/Wolfieheart/ArmorStandEditor-Reborn")
             .setColoredConsoleOutput(true)
             .setUserAgent(new UserAgentBuilder().addPluginNameAndVersion().addServerVersion())
             .checkEveryXHours(updateCheckerInterval)
             .checkNow();
     }
-    
 
-    public void runUpdateCheckerWithOPNotifyOnJoinEnabled() {
-        new UpdateChecker(this, UpdateCheckSource.HANGAR, HANGAR_RESOURCE_ID)
+    private void runUpdateCheckerWithOPNotifyOnJoinEnabled() {
+        new UpdateChecker(this, UpdateCheckSource.HANGAR, HANGAR_RELEASE_CHANNEL)
             .setDownloadLink("https://hangar.papermc.io/Wolfieheart/ArmorStandEditor-Reborn")
             .setColoredConsoleOutput(true)
             .setNotifyOpsOnJoin(true)
@@ -337,7 +340,7 @@ public class ArmorStandEditorPlugin extends JavaPlugin {
             .checkEveryXHours(updateCheckerInterval)
             .checkNow();
     }
-    
+
 
     //Implement Glow Effects for Wolfstorm/ArmorStandEditor-Issues#5 - Add Disable Slots with Different Glow than Default
     private void registerScoreboards(Scoreboard scoreboard) {
@@ -345,7 +348,7 @@ public class ArmorStandEditorPlugin extends JavaPlugin {
 
         //Register the In Use Team First - It doesnt require a Glow Effect
         // Add better handing for InUse already there. This should stop the errors re - Team already registered appearing
-        if(scoreboard.getTeam(inUseTeam) == null) {
+        if (scoreboard.getTeam(inUseTeam) == null) {
             scoreboard.registerNewTeam(inUseTeam);
         } else {
             getLogger().info("Scoreboard for AS-InUse Already exists. Continuing to load");
@@ -354,7 +357,7 @@ public class ArmorStandEditorPlugin extends JavaPlugin {
         //Fix for Scoreboard Issue reported by Starnos - Wolfst0rm/ArmorStandEditor-Issues/issues/18
         if (scoreboard.getTeam(lockedTeam) == null) {
             scoreboard.registerNewTeam(lockedTeam);
-            scoreboard.getTeam(lockedTeam).color(NamedTextColor.RED);
+            scoreboard.getTeam(lockedTeam).color(RED);
         } else {
             getLogger().info("Scoreboard for ASLocked Already exists. Continuing to load");
         }
@@ -390,7 +393,7 @@ public class ArmorStandEditorPlugin extends JavaPlugin {
     @Override
     public void onDisable() {
         for (Player player : Bukkit.getServer().getOnlinePlayers()) {
-            if(PaperLib.getHolder(player.getOpenInventory().getTopInventory(), false).getHolder() == editorManager.getMenuHolder()){
+            if (PaperLib.getHolder(player.getOpenInventory().getTopInventory(), false).getHolder() == editorManager.getMenuHolder()) {
                 player.closeInventory(InventoryCloseEvent.Reason.DISCONNECT);
             }
         }
@@ -400,7 +403,13 @@ public class ArmorStandEditorPlugin extends JavaPlugin {
             unregisterScoreboards(scoreboard);
         }
 
-        debug.shutdown();
+        if (debugFlag) {
+            debug.shutdown();
+        }
+    }
+
+    public String getNmsVersion() {
+        return this.getMinecraftVersion();
     }
 
     public boolean getHasPaper() {
@@ -447,7 +456,7 @@ public class ArmorStandEditorPlugin extends JavaPlugin {
         return this.getConfig().getBoolean("runTheUpdateChecker");
     }
 
-    public boolean getDefaultGravity(){
+    public boolean getDefaultGravity() {
         return this.getConfig().getBoolean("defaultGravitySetting");
     }
 
@@ -472,15 +481,6 @@ public class ArmorStandEditorPlugin extends JavaPlugin {
     public double getMaxScaleValue() {
         return this.getConfig().getDouble("maxScaleValue");
     }
-
-    private void runWarningsFolia() { 
-        getLogger().warning("Scoreboards currently do not work on Folia. Scoreboard Coloring will not work");
-        getLogger().warning("This also means the Teams for ASLocked and AS-InUse will also not work. Sever Owners if you see this: ");
-        getLogger().warning("This is not a bug. Warn Players to be careful with ArmorStands and 2 people using them at the same time.... ");
-        getLogger().warning(".... as this is known to cause Duplicate Items. Also warn you server moderation team. ");   
-    }
-
-
 
     public boolean isEditTool(ItemStack itemStk) {
         if (itemStk == null) {
@@ -543,15 +543,6 @@ public class ArmorStandEditorPlugin extends JavaPlugin {
             }
 
         }
-
-        if (allowCustomModelData && customModelDataInt != null) {
-            //If the ItemStack does not have Metadata then we return false
-            if (!itemStk.hasItemMeta()) {
-                return false;
-            }
-            List<Float> itemCustomModel = itemMeta.getCustomModelDataComponent().getFloats();
-            return itemCustomModel.equals(customModelDataInt);
-        }
         return true;
     }
 
@@ -569,7 +560,7 @@ public class ArmorStandEditorPlugin extends JavaPlugin {
         //Re-Register Scoreboards
         if (!hasFolia) {
             scoreboard = Objects.requireNonNull(this.getServer().getScoreboardManager()).getMainScoreboard();
-            registerScoreboards(scoreboard);           
+            registerScoreboards(scoreboard);
             asTeams.add(lockedTeam);
             asTeams.add(inUseTeam);
         } else {
@@ -601,7 +592,9 @@ public class ArmorStandEditorPlugin extends JavaPlugin {
         requireToolName = getConfig().getBoolean("requireToolName", false);
         if (requireToolName) {
             editToolNameRaw = getConfig().getString("toolName", null);
-            if (editToolNameRaw != null) editToolName = LegacyComponentSerializer.legacyAmpersand().deserialize(editToolNameRaw);
+            if (editToolNameRaw != null) {
+                editToolName = (Component) LegacyComponentSerializer.legacyAmpersand().deserialize(editToolNameRaw);
+            }
         }
 
         //Custom Model Data
@@ -683,7 +676,6 @@ public class ArmorStandEditorPlugin extends JavaPlugin {
     }
 
 
-
     //Metrics/bStats Support
     private void getMetrics() {
 
@@ -753,12 +745,22 @@ public class ArmorStandEditorPlugin extends JavaPlugin {
         String serverBrand = getServer().getName();
         try {
             serverBrand = ServerBuildInfo.buildInfo().brandName();
-        } catch (NoClassDefFoundError ignored) {}
+        } catch (NoClassDefFoundError ignored) {
+        }
 
         final String finalBrand = serverBrand;
         metrics.addCustomChart(new SimplePie("server_type", () -> finalBrand));
 
     }
+
+
+    private void runWarningsFolia() {
+        getLogger().warning("Scoreboards currently do not work on Folia. Scoreboard Coloring will not work");
+        getLogger().warning("This also means the Teams for ASLocked and AS-InUse will also not work. Sever Owners if you see this: ");
+        getLogger().warning("This is not a bug. Warn Players to be careful with ArmorStands and 2 people using them at the same time.... ");
+        getLogger().warning(".... as this is known to cause Duplicate Items. Also warn you server moderation team. ");
+    }
+
 
     public NamespacedKey getIconKey() {
         if (iconKey == null) iconKey = new NamespacedKey(this, "command_icon");
@@ -772,4 +774,7 @@ public class ArmorStandEditorPlugin extends JavaPlugin {
         return debugFlag;
     }
 
+    public String getASEVersion() {
+        return ASE_VERSION;
+    }
 }
